--- a/cryptopass_web3_btn/package.json
+++ b/cryptopass_web3_btn/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "csstype": "^3.1.2",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/css-modules": "^1.0.3"
   }
 }
