--- a/cryptopass_smartContracts/.env
+++ b/cryptopass_smartContracts/.env
@@ -1,3 +1,4 @@
 RPC_URL="<FILLME>"
 PRIVATE_KEY="<FILLME>"
-WS_ADDRESS="0xA833D22FeFB0DE9f2B4847c5e5Fe0Cc4542871B3"
+# WS_ADDRESS="0xA833D22FeFB0DE9f2B4847c5e5Fe0Cc4542871B3" # OLD ONE
+WS_ADDRESS="0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC"
